-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 9
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8207831 | 8u192 | Arunprasad Rajkumar | P4 | Resolved | Fixed | b03 |
Sites like https://developer.mozilla.org/fr/docs/Mozilla/MathML_Project/Basics,
has rendering issues due to MathML token elements (like <mi>, <mo> elements ), We need to improve the rendering classes for MathML token elements in webkit.
We can see the matrix and other mathematical equations completely out of place.
This issue exists in pre-8u60 also.
has rendering issues due to MathML token elements (like <mi>, <mo> elements ), We need to improve the rendering classes for MathML token elements in webkit.
We can see the matrix and other mathematical equations completely out of place.
This issue exists in pre-8u60 also.
- backported by
-
JDK-8207831 Rendering issues with MathML token elements
-
- Resolved
-
- duplicates
-
JDK-8089878 HTMLEditor messes up MathML markup
-
- Closed
-
-
JDK-8090887 Support MathML
-
- Closed
-
- relates to
-
JDK-8210970 MathML editing issues in HTMLEditor
-
- Open
-
-
JDK-8089878 HTMLEditor messes up MathML markup
-
- Closed
-
- links to
(2 links to)