8147476: Rendering issues with MathML token elements

Reviewed-by: arajkumar, kcr