modules/javafx.web/src/main/java/com/sun/webkit/perf/WCFontPerfLogger.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -98,6 +98,13 @@ public final class WCFontPerfLogger extends WCFont {
         logger.resumeCount("GETGLYPHWIDTH");
         double res = fnt.getGlyphWidth(glyph);
         logger.suspendCount("GETGLYPHWIDTH");
+        return res;
+    }
+
+    public float[] getGlyphBoundingBox(int glyph) {
+        logger.resumeCount("GETGLYPHBOUNDINGBOX");
+        float[] res = fnt.getGlyphBoundingBox(glyph);
+        logger.suspendCount("GETGLYPHBOUNDINGBOX");
         return res;
     }
 
